--- a/sougou/sougou.html
+++ b/sougou/sougou.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="https//cdn.bootcss.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
     <title>搜狗搜索</title>
 </head>
 <style>
